fixed z-index in usersPage

--- a/src/Components/Member/index.css
+++ b/src/Components/Member/index.css
@@ -1,6 +1,4 @@
 .member {
-  position: relative;
-  z-index: 1;
   display: flex;
   align-items: center;
 
